syntax="proto3";

package demogrpc;
option java_package="com.demogrpc";
option java_multiple_files=true;

service order{

    rpc getOrder(GetOrderRequest) returns (APIResponse);

}
message GetOrderRequest{
    string id=1;
}

message APIResponse{
    string ticker=1;
    string direction=2;
    int32 quantity=3;
    string orderId=4;
    int32 price=5;
    string username=6;
    string email=7;

}

